Closed Bug 1160126 Opened 10 years ago Closed 10 years ago

Restart bluetoothd daemon automatically for API V2

Categories

(Firefox OS Graveyard :: Bluetooth, defect)

ARM
Gonk (Firefox OS)
defect
Not set
normal

Tracking

(firefox42 fixed)

RESOLVED FIXED
FxOS-S2 (10Jul)
Tracking Status
firefox42 --- fixed

People

(Reporter: shawnjohnjr, Assigned: shawnjohnjr)

References

Details

Attachments

(1 file, 1 obsolete file)

STR: 1. Kill bluetoothd daemon 2. do "adb shell ps | grep bluetoothd" to see that bluetoothd didn't restart Expected: bluetoothd should have automatically restarted. Toggling bluetooth in settings restarts the daemon which we shouldn't have to.
Blocks: 1115656
Assignee: nobody → shuang
I found some parts are missing in v2. Here is the fix.
The logic is the same as v1 api.
Comment on attachment 8623711 [details] [diff] [review] bug1160126-mc.patch Review of attachment 8623711 [details] [diff] [review]: ----------------------------------------------------------------- The code looks good to me. Thanks, Jocelyn ::: dom/bluetooth/bluedroid/BluetoothServiceBluedroid.cpp @@ +253,5 @@ > MOZ_ASSERT(NS_IsMainThread()); > > BT_LOGR("BluetoothInterface::Disable failed: %d", aStatus); > > + BluetoothService::AcknowledgeToggleBt(false); Please rebase on latest m-c, then we could remove the #ifndef directly.
Attachment #8623711 - Flags: review?(joliu) → review+
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → FxOS-S2 (10Jul)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: