Bug 1160126 - Restart bluetoothd daemon automatically for API V2, r=jocelyn